    - [ GH-105 ] from java.util import * (etc.) not working in JDK 14+ (bjo 2792)
    - [ GH-102 ] Fix CRC32.update calls in zlib.py
    - [ GH-101 ] Improve boxing of arguments to vararg methods
    - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
    - [ GH-97 ] Failures in SNI support affecting pip
    - [ GH-93 ] Permissions problems with compiled source files ($py.class)
    - [ GH-77 ] Broken AST adapter
    - [ GH-74 ] Clarify license position in relation to zxJDBC.
    - [ GH-57 ] JavaWebStart compatibility broken
    - [ GH-35 ] Travis CI on JDKs 8, 11, 13 and add Windows to OSes
    - [ GH-50 ] (First) migration from Mercurial corrupted project history
    - [ GH-49 ] Update Darwin jffi library dependency
    - [ GH-27 ] -Q new always fails
    - [ GH-12 ] Test classes in distributed artifacts
    - [ GH-4 ] Swap from Mercurial to Git as our SCM tool
    - [ GH-2 ] Transfer closed-fixed issues in NEWS from frozen-mirror
    - [ 2924 ] module-info.class in root of JAR causes problems (also GH-54?)
    - [ 2918 ] slim jar: missing resource file for zxJDBC (also GH-187)
    - [ 2892 ] Migrate from hg.python.org to GitHub

  New Features

    - The jython command respects the PYTHONDONTWRITEBYTECODE environment variable (GH-128).

    - Under PR GH-101, the matching of sequence arguments to the parameters of Java methods is
      improved. A Java varargs parameter does not match a final sequence in the call
      if an array parameter could do so. (Thanks Peter Holloway.)

    - array.array itemsize of unsigned types is now the same as their signed counterparts, where 
      previously it was mostly double. Internal representations have changed. Anomalies have been
      eliminated between itemsize and the serialisation (tostring() etc.) for unsigned types,
      and in the range of values accepted in different contexts. The size of type 'u' (unicode
      character) is 4 on all platforms. Client code that was working around these anomalies may