@@ -192,6 +192,7 @@ Jython in ways large and small, in no particular order:
     Xiaoyin Liu
     Joe Shannon
     Dominik Broj
+    shoaniki (GitHub name)
 
 Local Variables:
 mode: indented-text
